tests/run-pass/typeck/explicit-return.rs
fn foo() -> int {
    return 2;
}

fn main() {
    let a: int = foo();
}