tests/compile-fail/typeck/return-with-wrong-type.rs
fn foo() -> int {
    return;  //! ERROR(2:11): type mismatch: expected int, got ()
}

fn main() {}